# BLACKJACK.cpp

./: CMakeLists.txt  Pseudocode  README.md
Archivos pa el copy paste/: V2.cpp  blackjack.h  card.h  figure.h  player.cpp  suite.h  winner.h
Diagramas/: Diagramas Proyecto.drawio
NEW CODE/: blackjack.cpp  card.cpp  deck.cpp  deck.h  enums.h  player.h
PseudoCodigo/: xd
avance codigo/: main.cpp
carpeta ya modulada/: 1.0.h  1.1.h  1.2.h  1.3.h  2.0.cpp  2.0.h  3.0.cpp  3.0.h  5.0.cpp  5.0.h
modulos/: 1.0.h  1.1.h  1.2.h  1.3.h  2.0.cpp  2.0.h  3.0.cpp  3.0.h  4.0.cpp  4.0.h  5.0.cpp  5.0.h  6.0.cpp
prueba/: dksaj
