cmake_minimum_required(VERSION 3.29)
project(BLACKJACK_cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(BLACKJACK_cpp
        modulos/1.1.h
        modulos/1.2.h
        modulos/1.3.h
        modulos/1.0.h
        modulos/1.1.h
        modulos/1.2.h
        modulos/2.0.cpp
        modulos/2.0.h
        modulos/3.0.cpp
        modulos/3.0.h
        modulos/4.0.cpp
        modulos/4.0.h
        modulos/5.0.cpp
        modulos/5.0.h
        modulos/6.0.cpp
        modulos/1.0.h
        modulos/1.0.h
        modulos/1.1.h
        modulos/1.0.h)
